fix safari sign in form text align

--- a/client/style.sass
+++ b/client/style.sass
@@ -103,3 +103,8 @@
 	.message i.icon
 		-webkit-flex-shrink: 0
 		flex-shrink: 0
+
+////////////////////////////////////////////////////////////////////////////////
+// fix safari text align bug
+.at-form .at-pwd-form input.ui.fluid.button
+	display: block
